<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:backgroundTint="#0CC313"
        android:onClick="onClickStartGame"
        android:text="@string/start_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewVictoryPoint" />

    <TextView
        android:id="@+id/textViewCommandPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:text="@string/command_point"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/buttonAddCommandPoint"
        app:layout_constraintStart_toStartOf="@id/buttonRemoveCommandPoint"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewVictoryPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/victory_point"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/buttonAddVictoryPoint"
        app:layout_constraintStart_toStartOf="@id/buttonRemoveVictoryPoint"
        app:layout_constraintTop_toBottomOf="@+id/textViewCommandPoint" />

    <Button
        android:id="@+id/buttonRemoveCommandPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="onClickRemoveCommandPoint"
        android:text="@string/remove"
        app:layout_constraintEnd_toStartOf="@+id/textViewCommandPoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRemoveVictoryPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClickRemoveVictoryPoint"
        android:text="@string/remove"
        app:layout_constraintEnd_toStartOf="@+id/textViewVictoryPoint"
        app:layout_constraintHorizontal_bias="0.403"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRemoveCommandPoint" />

    <Button
        android:id="@+id/buttonAddCommandPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:onClick="onClickAddCommandPoint"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewCommandPoint"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAddVictoryPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClickAddVictoryPoint"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.596"
        app:layout_constraintStart_toEndOf="@+id/textViewVictoryPoint"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddCommandPoint" />

    <TextView
        android:id="@+id/textViewTurningPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turning_point"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textViewCommandPoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEndGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#BC1414"
        android:onClick="onClickEndGame"
        android:text="@string/end_game"
        app:layout_constraintEnd_toEndOf="@+id/buttonStartGame"
        app:layout_constraintStart_toStartOf="@+id/buttonStartGame"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartGame" />

    <Button
        android:id="@+id/buttonKillTeam"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="180dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/addkillteambutton"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEndGame" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationMain"
        android:layout_width="409dp"
        android:layout_height="56dp"
        app:backgroundTint="#5E5959"
        app:itemIconTint="@drawable/bottom_navigation_selector"
        app:itemTextColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/main_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>